syntax = "proto3";
package rill.ui.v1;

import "google/protobuf/timestamp.proto";
import "rill/runtime/v1/api.proto";
import "rill/runtime/v1/catalog.proto";

message DashboardState {
  google.protobuf.Timestamp time_start = 1;
  google.protobuf.Timestamp time_end = 2;
  rill.runtime.v1.TimeGrain time_granularity = 3;
  rill.runtime.v1.MetricsViewFilter filters = 4;
}
